--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@ body {
     #e664a5 0%,
     #9198e5 100%
   ); */
-  height: 10000px;
-  position: relative
+  height: 700vh;
+  position: relative;
+  overflow-x: hidden;
 }
 
 @font-face {
@@ -41,6 +42,64 @@ body {
   align-items: center; 
 }
 
+.cloud {
+  position: absolute;
+  animation: move1 55s linear infinite;
+}
+
+@keyframes move1 {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(125vw); }
+}
+
+.c1 {
+  width: 400px;
+  right: 100vw;
+  animation-delay: -30s;
+  top: 0px;
+}
+
+.c2 {
+  width: 400px;
+  right: 100vw;
+  top: -10px;
+}
+
+.c3 {
+  width: 400px;
+  right: 100vw;
+  top: 500px;
+  animation-delay: -20s;
+}
+
+.c4 {
+  width: 400px;
+  right: 100vw;
+  animation-delay: -15s;
+  top: 150px;
+}
+
+.c5 {
+  width: 400px;
+  right: 100vw;
+  top: 430px;
+  animation-delay: -35s;
+}
+
+.c6 {
+  width: 400px;
+  right: 100vw;
+  top: 400px;
+  animation-delay: -5s;
+}
+
+.c7 {
+  width: 400px;
+  right: 100vw;
+  top: 500px;
+  animation-delay: -20s;
+}
+
 #title {
   font-family: 'Inknut';
   font-size: 80px;
@@ -73,6 +132,7 @@ body {
 .p-container {
   height: 500px;
   width: 1500px;
+  margin-bottom: 150px;
 }
 
 #p-title-container {
@@ -124,12 +184,12 @@ body {
 #about-img-container {
   display: flex;
   justify-content: center; 
+  align-items: center; 
 }
 
 #about-container {
   width: 750px;
-  height: 400px;
-  float: left
+  float: left;
 }
 
 .about-item {
@@ -147,7 +207,7 @@ body {
 }
 
 .fade.visible {
-  animation: fadeIn 2s ease-out forwards;
+  animation: fadeIn 1.5s ease-out forwards;
 }
 
 #about1 {
@@ -167,7 +227,6 @@ body {
 }
 
 #img-container {
-  overflow: hidden;
   position: relative;
   text-align: center;
   transition: 0.3s;
@@ -176,7 +235,7 @@ body {
 .img-text {
   font-family: 'Inknut';
   position: absolute;
-  top: 80%;
+  top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
@@ -188,6 +247,7 @@ body {
   width: 300px;
   height: auto;
   transition: 0.3s;
+  box-shadow: 5px 5px 5px #585858;
 }
 
 #about-img:hover {
@@ -207,10 +267,95 @@ body {
   align-items: center; 
 }
 
-.cloud {
-
+#p4 {
+  height: 100vh;
+  top: 300vh;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
 }
 
-.c1 {
-  width: 400px
+#p5 {
+  height: 100vh;
+  top: 400vh;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+
+#p6 {
+  height: 100vh;
+  top: 500vh;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+
+#resume-img {
+  height: 450px;
+  box-shadow: 5px 5px 5px #585858;
+  margin-right: 100px
+}
+
+.resume-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.download {
+  position: relative;
+  background-color: #a11f81;
+  border-radius: 50px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 30px; 
+  font-family: 'Inknut';
+  font-size: 16px;
+  color: white;
+  padding: 3px 10px 3px 10px;
+  border-width: 2px;
+  transition-duration: 0.4s;
+  border-color: #a11f81;
+}
+
+.download:hover {
+  background-color: transparent;
+  color: #a11f81;
+  border-color: #a11f81;
+  border-width: 2px;
+}
+
+#p7 {
+  height: 100vh;
+  top: 600vh;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+
+.thanks {
+  font-family: 'Inknut-bold';
+  font-size: 25px;
+  color: #a11f81;
+  margin-top: 30px;;
+  margin-bottom: 0;
+  line-height: 1.5;
+}
+
+.contact-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.questions {
+  font-family: 'Cursive';
+  font-size: 25px;
+  color: black;
+  line-height: 1;
+  margin-top: 0;
+  margin-bottom: 30px;
 }
